--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,13 @@
-body,header,div {
-    margin:0;
+body,
+header,
+div {
+  margin: 0;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.placeholder {
+  height: 252px;
 }
